--- a/modules/search/client/views/partials/search-widget.html
+++ b/modules/search/client/views/partials/search-widget.html
@@ -1,11 +1,11 @@
-<div class="search-widget collapsed">
-  <form id="swForm" class="sw-resize-container sw-form">
-
-    <button class="sw-expand-btn btn icon-btn">
-      <i class="glyphicon glyphicon-search"></i>
-    </button>
-    <input class="form-control sw-input" type="text" placeholder="Search"
-           ng-model="vm.searchText"
-           ng-keypress="vm.searchTextKeyPress($event)"/>
-  </form>
+<div class="search-widget collapsed" id="search-widget">
+	<form id="swForm" class="sw-resize-container sw-form">
+		<button class="sw-expand-btn btn icon-btn" onclick="swMenuShow()">
+			<i class="glyphicon glyphicon-search"></i>
+		</button>
+		<input class="form-control sw-input" type="text" placeholder="Search" ng-model="vm.searchText" ng-keypress="vm.searchTextKeyPress($event)"/>
+		<button class="sw-collapse-btn btn icon-btn" onclick="swMenuHide()">
+			<span aria-hidden="true">&times;</span>
+		</button>
+	</form>
 </div>
