--- a/modules/search/client/scss/search-results.scss
+++ b/modules/search/client/scss/search-results.scss
@@ -1,3 +1,8 @@
+$list-selected-color: #fff;
+$list-selected-bg: #5091cd;
+$list-selected-hover-bg: #4187c9;
+$list-selected-border: 1px solid #4187c9;
+
 .sr-browser-container  {
     position: relative;
 
@@ -10,34 +15,59 @@
     }
 
     .table-container {
-        table {
+        .sr-table {
             @include flexbox();
             @include flexdirection(column);
             width: 100%;
             height: 100%;
+
+            > thead, > tbody, > tfoot {
+                display: block;
+
+                > tr {
+                    display: table;
+                    width: 100%;
+                    border-bottom: none;
+                }
+            }
+
+            > thead {
+                @include flex(0 0 auto);
+
+                > tr {
+                    > th {
+                        border-bottom: $table-row-border;
+                    }
+                }
+            }
+
+            > tbody {
+                @include flex(1 1 auto);
+                overflow-y: scroll;
+
+                > tr {
+                    > td {
+                        border-bottom: $table-row-border;
+                    }
+
+                    &.selected {
+                        > td {
+                            border-bottom: $list-selected-border;
+                        }
+                    }
+                }
+            }
+
+            > tfoot {
+                @include flex(0 0 auto);
+                margin-top: -1px;
+            }
         }
     }
 }
 
-$list-selected-color: #FFF;
-$list-selected-bg: #5091cd;
-$list-selected-hover-bg: #4187c9;
-$list-selected-border: 1px solid #4187c9;
-
 .sr-table {
-    tr {
-        display: table;
-        width: 100%;
-    }
-
-    thead, tbody, tfoot {
-        display: block; /* Required for IE */ 
-    }
-
     thead {
-        @include flex(0 0 auto);
-        width: 100%;
-
         > tr {
             > th {
                 &.actions-col.x1 {
@@ -48,43 +78,49 @@ $list-selected-border: 1px solid #4187c9;
     }
 
     tbody {
-        @include flex(1 1 auto);
-        overflow-y: scroll;
-
         > tr {
             > td {
                 vertical-align: top;
 
                 &.actions-col.x1 {
                     width: 5rem;
+                    text-align: initial;
+
+                    .btn-group {
+                        float: none;
+                    }
+
+                    .dropdown-menu {
+                        top: -0.3rem;
+                        right: -0.65rem;
+                        box-shadow: none;
+                    }
                 }
             }
 
             &.selected {
-                > td {
-                    border-bottom: $list-selected-border;
-                    background: $list-selected-bg;
-                    color: $list-selected-color;
+                background: $list-selected-bg;
+                color: $list-selected-color;
 
-                    .glyphicon {
-                        color: inherit;
+                > td {
+                    .avatar {
+                        .glyphicon {
+                            color: inherit;
+                        }
+                    }
+
+                    .dropdown-menu {
+                        .btn {
+                            color: #494949;
+                        }
                     }
                 }
             }
         }
     }
 
-    tfoot {
-        @include flex(0 0 auto);
-        margin-top: -1px;
-    }
-
     .checkbox-col {
         width: 4rem;
-    }
-
-    .date-added-col {
-        width: 20rem;
     }
 
     .name-col {
@@ -92,31 +128,83 @@ $list-selected-border: 1px solid #4187c9;
 
         .name-col-inner {
             @include flexbox();
+        }
 
-            .avatar {
-                @include flex(0 0 auto);
-                margin-top: -0.2rem;
-                margin-right: 0.75rem;
-                margin-bottom: -0.5rem;
-                font-size: 1.8rem;
+        .avatar {
+            @include flex(0 0 auto);
+            margin-top: -0.2rem;
+            margin-right: 0.75rem;
+            margin-bottom: -0.5rem;
+            font-size: 1.8rem;
+        }
+
+        .sr-info {
+            @include flex(1 1 auto);
+
+            .sr-name {
+                font-weight: bold;
             }
 
-            .sr-info {
-                @include flex(1 1 auto);
-
-                .sr-desc {
-                    margin-top: 0.5rem;
-                }
+            .sr-desc {
+                margin-top: 0.5rem;
+                font-style: italic;
             }
         }
     }
 
+    .date-added-col {
+        width: 11rem;
+    }
+
     .status-col {
-        width: 18rem;
+        width: 8rem;
+        text-align: center;
 
         .glyphicon {
             font-size: 1.8rem;
             vertical-align: top;
+        }
+    }
+}
+
+@media (orientation: portrait)
+    and (max-device-width: 768px)  {
+    .sr-table {
+        thead {
+            > tr {
+                > th {
+                    &.actions-col.x1 {
+                        width: 5rem;
+                    }
+                }
+            }
+        } 
+    }
+}
+
+@media (orientation: landscape)
+    and (max-device-width: 1024px)  {
+    .sr-table {
+        thead {
+            > tr {
+                > th {
+                    &.actions-col.x1 {
+                        width: 5rem;
+                    }
+                }
+            }
+        } 
+    }
+}
+
+@media (min-width: 1200px) {
+    .sr-table {
+        .date-added-col {
+            width: 20rem;
+        }
+
+        .status-col {
+            width: 12rem;
         }
     }
 }
