--- a/modules/documents/client/views/document-manager-edit.html
+++ b/modules/documents/client/views/document-manager-edit.html
@@ -72,11 +72,11 @@
 				<button class="btn btn-default calendar-btn" ng-click="dateUploadedOpen()"><span class="glyphicon glyphicon-calendar"/></button>
 			</div>
 		</div>
-
+<!-- 
 		<div class="form-group file-type" x-show-errors>
 			<label for="documentId" class="control-label">Document ID</label>
 			<input class="form-control" id="documentId" name="documentId" type="text" ng-model="doc.documentId" ng-blur="validate()">
-		</div>
+		</div> -->
 
 		<div class="form-group m-b-0" x-show-errors>
 			<label for="description" class="control-label">Description</label>
