--- a/modules/maps/client/views/partials/map-layers.html
+++ b/modules/maps/client/views/partials/map-layers.html
@@ -8,12 +8,12 @@
 			models="mpl.projectFiltered"
 			coords="'self'">
 		</ui-gmap-markers>
-		<ui-gmap-layer	ng-repeat="layer in mpl.KMLLayers"
+		<!-- <ui-gmap-layer	ng-repeat="layer in mpl.KMLLayers"
 						type="KmlLayer"
 						options="layer"
-						show="layer.show"></ui-gmap-layer>
+						show="layer.show"></ui-gmap-layer> -->
 	</ui-gmap-google-map>
-	<div ng-if="mpl.KMLLayers.length > 0" >
+	<!-- <div ng-if="mpl.KMLLayers.length > 0" >
 		<label class="control-label"> Layers</label>
 		<div class="well well-sm">
 			<ul class="list-unstyled task-list">
@@ -25,28 +25,5 @@
 				</li>
 			</ul>
 		</div>
-	</div>
-	<!--
-	<div class="hidden col-md-3 col-top-padding">
-		<label class="control-label">Project Layers</label>
-		<div class="well well-sm">
-			<ul class="list-unstyled task-list">
-				<li><button class="btn btn-block btn-sm btn-layer" ng-class="{'btn-success': showPoint}" ng-click="showPoint = !showPoint">Primary Point</button></li>
-				<li><button class="btn btn-block btn-sm btn-layer" ng-class="{'btn-success': mpl.showKML}" ng-click="mpl.showKML = !mpl.showKML">Boundary</button></li>
-				<li ng-repeat="layer in mpl.projectLayers">
-					<button class="btn btn-block btn-sm btn-layer" ng-class="{'btn-success': mpl.formProjectLayers[layer._id]}" ng-click="mpl.formProjectLayers[layer._id] = !mpl.formProjectLayers[layer._id]">{{ layer.name }}</button>
-				</li>
-			</ul>
-		</div>
-	</div>
-	<label class="control-label">Shared Layers</label>
-	<div class="well well-sm">
-		<ul class="list-unstyled task-list">
-			<li ng-repeat="layer in mpl.sharedLayers">
-				<button class="btn btn-block btn-sm btn-layer" ng-class="{'btn-success': mpl.formSharedLayers[layer._id]}" ng-click="mpl.formSharedLayers[layer._id] = !mpl.formSharedLayers[layer._id]">{{ layer.name }}</button>
-			</li>
-		</ul>
-	</div>
-	-->
-			
+	</div> -->		
 </div>
