EPIC-843: Adding folder properties, editable name/description/date, refactor edit screen to use folder or document schema name, adding routes for grabbing folders within a project limited to the directory we are asking for.

--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -6,7 +6,7 @@
 				<button class="btn icon-btn" ng-click="documentMgr.selectNode(node.model.id)">
 					<span class="root-icon glyphicon glyphicon-hdd" ng-if="node.model.name == 'ROOT'"></span>
 					<span class="back-icon glyphicon glyphicon-menu-left"></span>
-					<span ng-show="node.model.name != 'ROOT'">{{ node.model.name }}</span>
+					<span ng-show="node.model.name != 'ROOT'">{{ node.model.folderObj.displayName }}</span>
 				</button>
 			</li>
 		</ul>
@@ -146,13 +146,13 @@
 							</span>
 							<span class="fb-col-group"
 								ng-click="$event.originalEvent.dropdown || documentMgr.selectDir(doc)"
-								ng-dblclick="$event.originalEvent.dropdown || documentMgr.openDir(doc)" title="{{doc.model.name}}">
+								ng-dblclick="$event.originalEvent.dropdown || documentMgr.openDir(doc)" title="{{doc.model.folderObj.displayName}}">
 								<span class="col name-col first-col">
 									<span class="avatar">
 										<span class="fb-folder glyphicon glyphicon-folder-close"></span>
 									</span>
 									<span class="name">
-										{{ doc.model.name }}
+										{{ doc.model.folderObj.displayName }}
 									</span>
 								</span>
 								<span hidden class="col author-col">---</span>
@@ -168,11 +168,11 @@
 										</button>
 										<ul class="dropdown-menu pull-right">
 											<li ng-if="project.userCan.manageFolders">
-												<button class="btn icon-btn" title="Edit Folder Details" ng-click="$event.stopPropagation();"
-														x-document-mgr-rename-folder
+												<button class="btn icon-btn" title="Edit FFF" ng-click="$event.stopPropagation();"
+														x-document-mgr-edit
 														x-project="project"
-														x-root="documentMgr.rootNode"
-														x-node="doc">
+														x-doc="doc"
+														x-on-update="documentMgr.onDocumentUpdate">
 													<span class="glyphicon glyphicon-edit"></span>
 												</button>
 											</li>
@@ -183,7 +183,7 @@
 														x-ok-text="'Yes'"
 														x-cancel-text="'No'"
 														x-confirm-text="'Are you sure you want to publish the selected folder?'"
-														x-confirm-items="[doc.model.name]"
+														x-confirm-items="[doc.model.folderObj.displayName]"
 														x-on-ok="documentMgr.publishFolder"
 														x-ok-args="doc">
 													<span class="glyphicon glyphicon-ok-circle"></span>
@@ -196,7 +196,7 @@
 														x-ok-text="'Yes'"
 														x-cancel-text="'No'"
 														x-confirm-text="'Are you sure you want to unpublish the selected folder?'"
-														x-confirm-items="[doc.model.name]"
+														x-confirm-items="[doc.model.folderObj.displayName]"
 														x-on-ok="documentMgr.unpublishFolder"
 														x-ok-args="doc">
 													<span class="glyphicon glyphicon-ban-circle"></span>
@@ -209,7 +209,7 @@
 														x-ok-text="'Yes'"
 														x-cancel-text="'No'"
 														x-confirm-text="'Are you sure you want to delete this folder? This action cannot be undone.'"
-														x-confirm-items="[doc.model.name]"
+														x-confirm-items="[doc.model.folderObj.displayName]"
 														x-on-ok="documentMgr.deleteDir"
 												        x-ok-args="doc">
 													<span class="glyphicon glyphicon-trash"></span>
@@ -539,7 +539,7 @@
 							</li>
 							<li>
 								<span class="name">Date Created:</span>
-								<span class="value">{{documentMgr.infoPanel.data.folderObj.dateAdded | date : format : timezone}}</span>
+								<span class="value">{{documentMgr.infoPanel.data.folderObj.documentDate | date : format : timezone}}</span>
 							</li>
 						</ul>
 					</section>
