--- a/modules/documents/client/views/document-manager-edit.html
+++ b/modules/documents/client/views/document-manager-edit.html
@@ -3,7 +3,8 @@
 		<button ng-disabled="editFileProperties.busy" type="button" class="btn btn-default close" ng-click="editFileProperties.cancel()">
 			<span aria-hidden="true">&times;</span>
 		</button>
-		<h3 class="modal-title">Edit File  &nbsp;&rsaquo;&nbsp;  {{originalName}}</h3>
+		<h3 ng-if="doc._schemaName === 'Document'" class="modal-title">Edit File  &nbsp;&rsaquo;&nbsp;  {{originalName}}</h3>
+		<h3 ng-if="doc._schemaName === 'Folder'" class="modal-title">Edit Folder  &nbsp;&rsaquo;&nbsp;  {{originalName}}</h3>
 	</div>
 
 	<div class="modal-body">
@@ -19,7 +20,7 @@
 			<input class="form-control" id="displayName" name="displayName" type="text" ng-model="doc.displayName" required ng-blur="validate()">
 		</div>
 
-		<div class="form-group" x-show-errors>
+		<div ng-if="doc._schemaName === 'Document'" class="form-group" x-show-errors>
 			<label class="control-label" for="documentType">Document Type</label>
 			<select class="form-control" title="Document Type" id="documentType" name="documentType"
 				ng-model="doc.documentType"
@@ -43,7 +44,8 @@
 		</div>
 
 		<div class="form-group datepicker" x-show-errors>
-			<label class="control-label" for="documentDate">Document Date<em class="required">(Required)</em></label>
+			<label ng-if="doc._schemaName === 'Folder'" class="control-label" for="documentDate">Created Date<em class="required">(Required)</em></label>
+			<label ng-if="doc._schemaName === 'Document'" class="control-label" for="documentDate">Document Date<em class="required">(Required)</em></label>
 			<div class="datepicker-input">
 				<input class="form-control" placeholder="YYYY-MM-DD"  id="documentDate" name="documentDate"
 					   ng-model="doc.documentDate" type="text"
@@ -56,8 +58,7 @@
 				<button class="btn btn-default calendar-btn" ng-click="dateOpen()"><span class="glyphicon glyphicon-calendar"/></button>
 			</div>
 		</div>
-
-		<div class="form-group datepicker" x-show-errors>
+		<div ng-if="doc._schemaName === 'Document'" class="form-group datepicker" x-show-errors>
 			<label class="control-label" for="dateUploaded">Uploaded Date<em class="required">(Required)</em></label>
 			<div class="datepicker-input">
 				<input class="form-control" placeholder="YYYY-MM-DD"  id="dateUploaded" name="dateUploaded"
@@ -73,7 +74,7 @@
 			</div>
 		</div>
 
-		<div class="form-group file-type" x-show-errors>
+		<div ng-if="doc._schemaName === 'Document'" class="form-group file-type" x-show-errors>
 			<label for="documentId" class="control-label">Document ID</label>
 			<input class="form-control" id="documentId" name="documentId" type="text" ng-model="doc.documentId" ng-blur="validate()">
 		</div>
