--- a/modules/search/client/scss/search-widget.scss
+++ b/modules/search/client/scss/search-widget.scss
@@ -96,6 +96,7 @@ $search-widget-btn-offset: 0.1rem;
 
             .sw-input {
                 padding-right: 7.2rem;
+                padding-left: 0.75rem;
                 opacity: 1;
                 transition: all ease-out 0.2s;
             }
